# gesha

./: .editorconfig  .gitignore  .openapi-generator-ignore  .prettierrc  ARCHITECTURE.markdown  Cargo.toml  GOALS.markdown  Justfile  Makefile  README.markdown  gesha  gesha.code-workspace  go.mod  go.sum  main.go  package-lock.json  package.json  rustfmt.toml
.cargo/: config
.sqlx/: query-4648f3f18d24b264086a004a08741331805ca86c844280529c8814f54e04d9b3.json  query-ac84083985ed63a61949ea71b459dc627f838989de1ed2c3270747094f452eac.json  query-ad69538b9e9f8df94fd29c49ec7c3a8d30e251cf129fd4a43387c0a8d464028b.json  query-b41cc9200c203805b7a1b8bb8ca7f302ab88eeffce05923964fa6d7f33b5b7e0.json  query-c82496261cef7981730da06df63d5190c433563caacaa447206087c9e77c9173.json  query-cb81024c069ad92faadadb17baec30153e6ff2863b859eb1336d7f144d4e03c4.json
api/: api.go  api_default.go  api_default_service.go  generator-config.yaml  logger.go  model_config.go  model_operation_result.go  model_pid_enabled.go  model_temperature_target.go  openapi.yaml  (+1 more)
experiments/repeatable/: README.md  measurement-history-heat-level-1.csv  measurement-history-heat-level-2.csv  measurement-history-heat-level-3.csv  measurement-history-heat-level-8.csv  pyproject.toml  test.csv
experiments/repeatable/gesha_cli/: __main__ copy.py  gesha_api.py
experiments/repeatable/power_level/: README.markdown  __main__.py  gesha_api.py
models/: README.markdown  api.py  main.py  pyproject.toml  util.py  visualisation.py
models/boiler_levels/: README.rmd  heat-level-15s-terminal-output.txt  heat-level-30s-terminal-output.txt  main.py  measurement-history-heat-level-10.csv  measurement-history-heat-level-15s-1.csv  measurement-history-heat-level-15s-10.csv  measurement-history-heat-level-15s-2.csv  measurement-history-heat-level-15s-3.csv  measurement-history-heat-level-15s-4.csv  measurement-history-heat-level-15s-5.csv  measurement-history-heat-level-15s-6.csv  measurement-history-heat-level-15s-7.csv  measurement-history-heat-level-15s-8.csv  measurement-history-heat-level-15s-9.csv  measurement-history-heat-level-4.csv  measurement-history-heat-level-5.csv  measurement-history-heat-level-6.csv  measurement-history-heat-level-7.csv  measurement-history-heat-level-9.csv  query-15s.sh
models/extraction_temperature/: README.rmd  __main__.py  dataset.py  main.py  nn.py  output.json  query.sh  query.sql  regression.py  shots.csv  shots.sql  thermofilter-21-08-2023.csv  thermofilter.csv
models/extraction_temperature/aux-silvia/: brew-1693483375606-1693483407166.json  brew-1693512590621-1693512621884.json  themofilter-31-08-2023.csv  thermofilter-20-08-2023.csv  thermofilter-21-08-2023-a.csv  thermofilter-22-08-2023.csv  thermofilter-part2-21-08-2023.csv
models/extraction_temperature/output/: extraction_temperature.onnx  extraction_temperature_2.onnx  extraction_temperature_lstm.onnx
models/extraction_temperature/output/extraction_temperature_lstm.onnx.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/extraction_temperature/output/extraction_temperature_lstm.onnx.tf/variables/: variables.data-00000-of-00001  variables.index
models/pre_heating/: automation.py  levels.py  query.sql
models/predictive/: dataset.py  dataset_test.py  main.py  train_nn.py
models/predictive/output/: predictive-10-09-2023.onnx  subset_model.onnx  temp_to_heat_sum.onnx
models/stock_control/: README.markdown  __main__.py  main.py  measurements.csv  query.sh  query.sql
models/thermal_lag/: README.rmd
models/thermal_loss/: README.markdown  __main__.py  data_processing.py  dataset.py  main.py  model_glm.py  query.sh  query.sql  regression_model.joblib
(+202 files in other folders)
