[tool.poetry]
name = "gesha_models"
version = "0.1.0"
description = "Models for the Silvia espresso machine"
authors = ["Luke Channings <luke@channings.me>"]
readme = "README.markdown"
packages = [{include = "thermal_loss"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thermal_loss = 'thermal_loss.__main__:main'
